# ClipForge

./: .env.example  CHECKLIST.md  README.md  developer.md  package.json  pnpm-lock.yaml  start-docker.sh  start.sh  stop-docker.sh  turbo.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src/: main.mjs  preload.mjs
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: placeholder-page.tsx
apps/web/lib/: admin-auth.ts  affiliate-discovery.ts  affiliate-network-links.ts  api-auth.ts  api.ts  auth.config.ts  auth.ts  brand-kit-defaults.ts  clip-access.ts  (+15 more)
apps/worker/: package.json  tsconfig.json
docs/: clipforge_ai_shorts_platform_cursor_spec.md  phase-10-ai-amazon-affiliate.md  phase-11-multi-affiliate.md  phase-12-post-mvp-platform.md  phase-8-polish.md  phase-9-monetization-overlays.md
infra/: docker-compose.yml  docker.env
scripts/: dev-common.sh  dev-turbo.sh  dev-web.sh  worker-ai-dev.sh
services/worker-ai/: README.md  pyproject.toml  requirements.txt
services/worker-ai/app/: main.py
services/worker-ai/app/jobs/: discover_product.py  score_clips.py  transcribe.py
services/worker-ai/app/routers/: discover_product.py  health.py  score_clips.py  transcribe.py
services/worker-video/: README.md  pyproject.toml  requirements.txt
services/worker-video/app/: main.py
services/worker-video/app/jobs/: extract_audio.py  import_video.py  render_clip.py
services/worker-video/app/routers/: health.py
(+168 files in other folders)
