[project]
name = "clipforge-worker-video"
version = "0.1.0"
description = "ClipForge video processing worker (FFmpeg, import, render)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "redis>=5.2.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 100
